tests/NormalTests/paczka1/fuzzy1/71380885.err
Error in line 9: 01hT0VACZ83 S388 57,5
Error in line 5: bztjisvG S388 52,3
Error in line 13: 01hT0VACZ83 A685 83,2
Error in line 14: bztjisvG A474 47,2
Error in line 18: 01hT0VACZ83 A474 83,7
Error in line 16: sCMvoMPLL A474 62,3
Error in line 24: A474 A474 24,0
